--- a/ShoppingCart/appsettings.json
+++ b/ShoppingCart/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ShoppingCart;MultipleActiveResultSets=True;"
+  "ConnectionStrings": {
+    "DbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ShoppingCart;MultipleActiveResultSets=True"
+  }
 }
+
+
