add sqlite for dev env

--- a/ShoppingCart/appsettings.json
+++ b/ShoppingCart/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ShoppingCart;MultipleActiveResultSets=True"
+    "ProdDbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ShoppingCart;MultipleActiveResultSets=True",
+    "LiteDbConnection": "Data Source=DevDb.db"
   }
 }
-
-
