--- a/ShoppingCart/Properties/launchSettings.json
+++ b/ShoppingCart/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "ShoppingCart": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
