--- a/ShoppingCart/appsettings.json
+++ b/ShoppingCart/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProdDbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ShoppingCart;MultipleActiveResultSets=True",
+    "DbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=ShoppingCart;MultipleActiveResultSets=True",
     "LiteDbConnection": "Data Source=DevDb.db"
   },
 
